# bitverter

./: BipCotNoGovSoftwareLicense.md  Cargo.toml  License.md  README.md  config.example.toml
bitverter-cli/: Cargo.toml  README.md
bitverter-cli/src/: main.rs
bitverter-server/: Cargo.toml  README.md  config.example.json  index.html
bitverter-server/src/: main.rs
bitverter_cli/: Cargo.toml
bitverter_cli/src/: main.rs
bitverter_lib/: Cargo.toml
bitverter_lib/src/: lib.rs
bitverter_server/: Cargo.toml  index.html
bitverter_server/site/: index.html  stylesheet.css
bitverter_server/src/: main.rs
bitverter_ui/: Cargo.toml  Dioxus.toml  README.md
bitverter_ui/src/: main.rs
cli/: Cargo.toml
server/: Cargo.toml
src/: main.rs
ui/: Cargo.toml
ui/src/: main.rs
