[workspace]
members = ["bitverter_cli", "bitverter_lib", "bitverter_server"]

# authors = [ "kn0wmad <kn0wmad@protonmail.com>" ]

# description = [ "A basic bitcoin denomination conversion tool" ]

# homepage = [ "bitverter.io - not live yet" ]

# documentation = [ "Check README for now" ]

# repository = [ "github.com/kn0wmad/osa" ]

# keywords = [ "bitcoin, anarchy, autonomy, conversion, converter, cryptocurrency, rust" ]

# categories = [ "bitcoin, anarchy, converter, rust" ]
