[workspace]
resolver = "2"

members = ["bitverter_cli", "bitverter_lib", "bitverter_server", "bitverter_ui"]

authors = ["kn0wmad <kn0wmad@protonmail.com>"]

description = ["A basic bitcoin conversion tool"]

# homepage = [ "bitverter.io - not live yet" ]

documentation = ["github.com/kn0wmad/bitverter"]

repository = ["github.com/kn0wmad/bitverter"]

keywords = [
    "bitcoin, anarchy, autonomy, conversion, converter, cryptocurrency, rust",
]

categories = ["bitcoin, anarchy, converter, rust"]
