[package]
name = "bitverter-server"
version = "0.1.0"
authors = ["kn0wmad <kn0wmad@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.3"
maud = "0.22.1"