[package]
name = "bitverter_lib"
version = "0.1.0"
authors = ["kn0wmad <kn0wmad@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.1", features = ["macros"] }
rust_decimal = "1.8.1"
