[package]
name = "bitverter_server"
version = "0.1.0"
authors = ["kn0wmad <kn0wmad@protonmail.com>"]
edition = "2021"

[dependencies]
bitverter_lib = { path = "../bitverter_lib" }
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }
